--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,12 @@ body {
 
 .header, .footer, .awesome {
     display: flex;
-    padding: 0px 50px;
-    justify-content: space-between;
+    padding: 0px 150px;
+    justify-content: center;
     align-items: center;
     background-color: #1F2937;
     color: #F9FAF8;
+    gap: 200px;
 }
 
 ul {
@@ -42,23 +43,68 @@ button {
     background-color: #3882f6;
     color: #F9FAF8;
     font-weight: bold;
+    font-size: 16px;
     padding: 5px 10px;
+    border: none;
 }
 
-h1, .info {
+button.alt {
+    border: 2px solid white;
+    flex: 0 1 auto;
+    align-items: flex-end;
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+}
+
+.info_text {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
 }
 
+h1.title {
+    margin: 0;
+    padding: 0;;
+}
+
 .awesome {
     display: flex;
     justify-content: center;
-    gap: 32px;
+    padding: 100px 50px;
+    gap: 16px;
 }
 
-h1, .awesome, .left {
+div.left {
+    width: 400px;
+    flex: 0 1 auto;
+    align-items: flex-start;
+}
+
+.awesome .left .title {
+    font-size: 48px;
     color: #F9FAF8;
+    font-weight: bolder;
+}
+
+img {
+    height: 270px;
+    background-color: grey;
+}
+
+img.round_border {
+    height: 150px;
+    border-radius: 10px;
+    border: 4px solid #3882f6;
+}
+
+.images {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-bottom: 20px;
 }
 
 .quote {
@@ -72,10 +118,23 @@ h1, .awesome, .left {
 }
 
 .cta {
-    margin: 50px 100px;
-    padding: 10px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 200px;
+    padding: 20px 50px;
     border-radius: 10px;
+    gap: 50px;
     background-color: #3882f6;
-    width: 800px;
     color: #E5E7EB;
+    flex: 1;
+}
+
+.cta h2, .cta h5 {
+    margin: 0;
+    padding: 0;
+}
+
+.footer {
+    height: 50px;
 }
