--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ body {
 
 .header, .footer, .awesome {
     display: flex;
-    padding: 0px 150px;
-    justify-content: center;
+    padding: 0px 250px;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #1F2937;
     color: #F9FAF8;
@@ -110,14 +110,29 @@ img.round_border {
     margin-bottom: 20px;
 }
 
+.images div {
+    text-align: center;
+    font-size: 14px;
+}
+
 .quote {
     display: flex;
-    padding: 30px 50px;
+    flex-direction: column;
+    padding: 30px 250px;
     background-color: #E5E7EB;
     color: #1F2937;
     font-size: 36px;
     font-weight: lighter;
     font-style: italic;
+    text-align: center;
+}
+
+.quote .right {
+    margin: 0;
+    text-align: right;
+    font-size: 24px;
+    font-weight: bold;
+    font-style: normal;
 }
 
 .cta {
